...
            android:layout_marginTop="20dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="12dp"
            app:drawableTint="#FFFFFF"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterSubmit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="TẠO TÀI KHOẢN"
            android:textColor="#6200EE"
            android:textStyle="bold"
            android:background="@drawable/bg_edittext_glass"
...
